--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecogrud</title>
-    <link rel="stylesheet" href="../Main/CSS/style.css">
-    <link rel="stylesheet" href="../Main/CSS/fonts.css">
-    <script src="../Main/JS/Sliders.js" defer></script>
-    <script src="../Main/JS/Burger.js" defer></script>
-    <script src="../Main/JS/animation.js" defer></script>
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/fonts.css">
+    <script src="../JS/Sliders.js" defer></script>
+    <script src="../JS/Burger.js" defer></script>
+    <script src="../JS/animation.js" defer></script>
 </head>
 <body>
     <!-- Header -->
@@ -144,3 +144,4 @@
     </footer>
 </body>
 </html>
+
