--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecogrud</title>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/fonts.css">
-    <script src="../JS/Sliders.js" defer></script>
-    <script src="../JS/Burger.js" defer></script>
-    <script src="../JS/animation.js" defer></script>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/fonts.css">
+    <script src="JS/Sliders.js" defer></script>
+    <script src="JS/Burger.js" defer></script>
+    <script src="JS/animation.js" defer></script>
 </head>
 <body>
     <!-- Header -->
@@ -53,19 +53,19 @@
         <h2>Наши услуги</h2>
         <ul class="services">
             <li>
-                <img src="../Main/images/hell_1.jpg" alt="Строительство домов" />
+                <img src="images/hell_1.jpg" alt="Строительство домов" />
                 <p>Строительство домов</p>
             </li>
             <li>
-                <img src="../Main/images/hell_2.jpg" alt="Капитальный ремонт" />
+                <img src="images/hell_2.jpg" alt="Капитальный ремонт" />
                 <p>Капитальный ремонт</p>
             </li>
             <li>
-                <img src="../Main/images/hell_1.jpg" alt="Проектирование" />
+                <img src="images/hell_1.jpg" alt="Проектирование" />
                 <p>Проектирование</p>
             </li>
             <li>
-                <img src="../Main/images/hell_2.jpg" alt="Инженерные сети" />
+                <img src="images/hell_2.jpg" alt="Инженерные сети" />
                 <p>Инженерные сети</p>
             </li>
         </ul>
@@ -76,9 +76,9 @@
         <h2>Портфолио</h2>
         <div class="slider">
             <div class="slides">
-                <img src="../Main/images/TheBest_1.jpg" alt="Проект 1" />
-                <img src="../Main/images/TheBest_2.jpg" alt="Проект 2" />
-                <img src="../Main/images/TheBest_3.jpg" alt="Проект 3" />
+                <img src="images/TheBest_1.jpg" alt="Проект 1" />
+                <img src="images/TheBest_2.jpg" alt="Проект 2" />
+                <img src="images/TheBest_3.jpg" alt="Проект 3" />
             </div>
             <button class="slider-prev">←</button>
             <button class="slider-next">→</button>
@@ -144,4 +144,5 @@
     </footer>
 </body>
 </html>
+
 
