--- a/user-agreement.html
+++ b/user-agreement.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Пользовательское соглашение — ЭкоГрад</title>
-    <link rel="stylesheet" href="../Main/CSS/user-agreement.css">
-    <link rel="stylesheet" href="../Main/CSS/fonts.css">
+    <link rel="stylesheet" href="CSS/user-agreement.css">
+    <link rel="stylesheet" href="CSS/fonts.css">
 </head>
 
 <body>
@@ -141,5 +141,6 @@
     </footer>
 
 </body>
+
 
 </html>
